모달에서 회원가입 localhost거부당함 왜?

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-# mariadb 설정
-spring.datasource.url=jdbc:mariadb://aidb.cf7e6ewnxcl2.ap-northeast-2.rds.amazonaws.com:3306/aidb
-spring.datasource.username=aidb
-spring.datasource.password=sbelql!
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# mariadb 설정 db.properties로
 
 #hibernate 설정
 spring.jpa.properties.hibernate.format_sql=true
@@ -14,4 +10,21 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
+# web 템플릿 설정
+spring.mustache.expose-session-attributes=true
+spring.mustache.suffix=.html
 
+#h2 db console 활성화 및 경로 설정
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:mem:test;
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# OAUTH2 설정 정보 포함
+spring.session.store-type=jdbc
+spring.profiles.include=oauth,apikey
