--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # UTF-8 세팅
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 
 # web 템플릿 설정
 spring.mustache.expose-session-attributes=true
@@ -27,4 +27,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # OAUTH2 설정 정보 포함
 spring.session.store-type=jdbc
-spring.profiles.include=oauth,apikey
+spring.profiles.include=oauth
