--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,16 +15,16 @@ spring.mustache.expose-session-attributes=true
 spring.mustache.suffix=.html
 
 #h2 db console 활성화 및 경로 설정
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.datasource.url=jdbc:h2:mem:test;
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+#spring.datasource.url=jdbc:h2:mem:test;
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # OAUTH2 설정 정보 포함
 spring.session.store-type=jdbc
-spring.profiles.include=oauth
+spring.profiles.include=oauth,db
